[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "annotation-converter"
version = "0.1.0"
description = "Convert Kognic-format annotations to OpenLABEL (simplified)"
authors = [{ name = "Han Liu", email = "hanliu0119@outlook.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["annotation_converter", "annotation_converter.*"]

[project.optional-dependencies]
dev = ["pytest", "httpx", "ruff", "mypy"]
